test electron auto-update

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <h1>Welcome to SocialBridge!</h1>
-    <p>Welcome to your Electron application.</p>
+    <p>I am testing the auto-update functionality of Electron auto-update.</p>
   </body>
 </html>
