test auto-update functionality after activating electron auto-update

--- a/src/index.html
+++ b/src/index.html
@@ -8,5 +8,7 @@
   <body>
     <h1>Welcome to SocialBridge!</h1>
     <p>I am testing the auto-update functionality of Electron auto-update.</p>
+
+    <p>I hope this works!</p>
   </body>
 </html>
