--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <title>Hello World!</title>
-
   </head>
   <body>
-    <h1>Welcome to SocialBridge!</h1>
-    <p>I am testing the auto-update functionality of Electron auto-update.</p>
-
-    <p>I hope this works!</p>
+    <div
+      style="display: block; width: 200px; height: 100px; border: 1px solid red"
+    >
+      <h3>SocialBridge Settings</h3>
+    </div>
   </body>
 </html>
